# PyPolyhedralCubature

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
pypolyhedralcubature/: polyhedralcubature.py
tests/: test_function.py  test_polynomial.py  test_polynomialQQ.py
