[tool.poetry]
name = "pypolyhedralcubature"
version = "0.1.0"
description = "Multiple integration on convex polytopes."
homepage = "https://github.com/stla/PyPolyhedralCubature"
authors = ["Stéphane Laurent <laurent_step@outlook.fr>"]
documentation = "https://pypolyhedralcubature.readthedocs.io/en/latest/"
keywords = ["integration", "polyhedron", "polytope"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pysimplicialcubature = "^0.1.0"
sympy = "^1.12"
numpy = "^1.26.2"
scipy = "^1.11.0"
sphinx = { version = "^7.2.0", optional = true }
sphinx-rtd-theme = { version = "^1.3.0", optional = true }
sphinxcontrib-napoleon = { version = "^0.7", optional = true }
sphinxcontrib-restbuilder = { version = "^0.3", optional = true }
pypoman = "^1.0.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon", "sphinxcontrib-restbuilder"]

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
